# zcash-paperwallet

./: Cargo.toml  README.md  example.json  package-lock.json  vercel.json
.github/workflows/: release-linux.yml  release-macos.yml  release-windows.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
lib/: Cargo.toml
lib/src/: json.rs  lib.rs  paper.rs  pdf.rs
lib/src/test_vectors/: mod.rs  ua.rs
src/: main.rs
web/: Cargo.toml
web/react-app/: package-lock.json  package.json
web/react-app/public/: index.html
web/react-app/src/: App.js
web/react-app/src/components/: EntropyCollector.css  EntropyCollector.js  Navbar.css  Navbar.js  QRCodeGenerator.js  WalletCard.css  WalletCard.js  WalletCardImg.css  WalletCardImg.js
web/react-app/src/pages/: About.js  Home.js  styles.css
web/react-app/src/wasm/: web.d.ts  web.js  web_bg.wasm  web_bg.wasm.d.ts
web/src/: lib.rs
