[package]
name = "zcash-paperwallet"
author = "James Katz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
paperwallet_lib = { path = "./lib" }

[workspace]
members = [
    "lib",
]